2.25.5-beta.5 fix achieve boxed layout alignfull

--- a/assets/scss/layout/_content-sidebar-wrap.scss
+++ b/assets/scss/layout/_content-sidebar-wrap.scss
@@ -13,8 +13,10 @@
 		}
 	}
 
-	> .content > .entry > .entry-wrap > .entry-content:first-child > .alignfull:first-child {
-		margin-top: calc(var(--content-sidebar-wrap-margin-top) * -1);
+	> .content > .entry > .entry-wrap > .entry-content:first-child > .alignfull:first-child,
+	> .content > .entry > .entry-wrap > .entry-content:first-child > :where(script, style):first-child + .alignfull,
+	> .content > .entry > .entry-wrap > .entry-content:first-child > :where(script, style):first-child + :where(script, style) + .alignfull {
+		margin-top: var(--alignfull-first-margin-top, calc(var(--content-sidebar-wrap-margin-top) * -1));
 	}
 
 	> .content > .entry > .entry-wrap:last-child > .entry-content > .alignfull:last-child {
