--- a/assets/scss/themes/achieve.scss
+++ b/assets/scss/themes/achieve.scss
@@ -33,6 +33,7 @@
 }
 
 .has-page-header .content {
+	--alignfull-first-margin-top: calc((var(--content-sidebar-wrap-margin-top) + 2em) * -1);
 
 	@include mq(md) {
 		padding: var(--content-padding, 2em);
